2010-10-24  Roland Clobus <rclobus@rclobus.nl>
	* common/state.c: Fix bug introduced on 2010-10-20
	* common/state.c: g_return_if_fail was not required.

2010-10-20  Roland Clobus <rclobus@rclobus.nl>
	* common/game.c, common/game.h, common/state.c, common/state.h,
	server/player.c: Renamed sm_vformat to game_vprintf and try_recv to
	game_vscanf, for better generic location.

2010-10-15  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Extra quotes for GOB2 check, needed for Debian Stable.

2010-10-14  Roland Clobus <rclobus@rclobus.nl>
	* server/gold.c: Set gold counter to zero after automatic distribution
	of gold.

2010-10-13  Roland Clobus <rclobus@rclobus.nl>
	* server/player.c, server/server.h, server/main.c: Automatically quit a
	game that is started on the metaserver that has no human player for
	30 minutes.
	* pioneers.nsi.in: Adding en_GB and gl.

2010-10-07  Roland Clobus <rclobus@rclobus.nl>
	* common/notifying-string.gob, common/Makefile.am, configure.ac,
	Makefile.am, client/gtk/name.c, client/gtk/frontend.h,
	client/gtk/offline.c, client/gtk/connect.c: Ensure that the name of the
	player is always up to date in any view.

2010-10-06  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Make $(ECHO) work on Cygwin too
	* README.Cygwin: Updated to match Cygwin 1.7
	* configure.ac: Server appears to work in Cygwin

2010-10-05  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/gui.c, server/gtk/main.c, common/gtk/common_gtk.c,
	common/gtk/common_gtk.h: Added a close button on tab pages.
	Based on a patch by Anti Sullin <anti.sullin@gmail.com> and
	layout suggestions from http://www.gtkforums.com/about4027.html

2010-09-22  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/gtkbugs.c, common/gtk/guimap.c, client/gtk/histogram.c:
	Build with full deprecation checks on Gtk+ 2.20.1

2010-09-21  Roland Clobus <rclobus@rclobus.n>
	* server/theme_preview.game: Game to test the look of a new theme.

2010-09-02  Roland Clobus <rclobus@rclobus.nl>