@@ -1,0 +1,2 @@
+#! /bin/dash
+~/local/bin/pioneers-meta-server -s pioneers.game-host.org -p 5561-5565 --syslog-debug
