@@ -1,0 +1,3 @@
+#!/bin/dash
+sleep 1
+~/local/bin/pioneersai -s localhost -p 5558 -n Lobbybot -a lobbybot --debug
